<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name1">JTFX</string>
    <string name="labelLogin">Login:</string>
    <string name="labelPassword">Password:</string>
    <string name="labelConnection">Connection:</string>
    <string name="labelHost">Host:</string>
    <string name="login">Login</string>
    <string-array name="order_types">
        <item>Market Order</item>
        <item>Entry Order</item>
    </string-array>
    <string name="offers">Offers</string>
    <string name="accounts">Accounts</string>
    <string name="orders">Orders</string>
    <string name="createorder">Create Order</string>
    <string name="trades">Trades</string>
    <string name="closed_trades">Closed Trades</string>
    <string name="summary">Summary</string>
    <string-array name="tables">
        <item>Offers</item>
        <item>Accounts</item>
        <item>Orders</item>
        <item>Trades</item>
        <item>Closed Trades</item>
        <item>Summary</item>
    </string-array>
</resources>